2011-04-13  Abhishek Arya  <inferno@chromium.org>

Reviewed by James Robinson.

        Tests that iframe outline is drawn.
        https://bugs.webkit.org/show_bug.cgi?id=57439

        * fast/frames/iframe-outline.html: Added.
        * platform/mac/fast/frames/iframe-outline-expected.checksum: Added.
        * platform/mac/fast/frames/iframe-outline-expected.png: Added.
        * platform/mac/fast/frames/iframe-outline-expected.txt: Added.
2011-04-13  Abhishek Arya  <inferno@chromium.org>

        Reviewed by James Robinson.

        Draw outline for render widgets.
        https://bugs.webkit.org/show_bug.cgi?id=57439

        Test: fast/frames/iframe-outline.html

        * rendering/RenderWidget.cpp:
        (WebCore::RenderWidget::paint):

Canonical link: https://commits.webkit.org/73560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83803 268f45cc-cd09-0410-ab3c-d52691b4dbfc